# Hazelcast

./: README.md  db.sqlite3  hazelcast_config.py  list.py  manage.py  maps.py  multimap.py  pyproject.toml  queue.py  set.py  topic.py
myapp/: admin.py  hazelcast_cache.py  maps.py  tests.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
myapp/static/css/: style.css
myapp/static/js/: app.js
myapp/templates/: calculator.html  create_item.html  delete_item.html  index.html  update_item.html
project_hazelcast/: README.md  asgi.py  settings.py  urls.py  wsgi.py
